--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -21,7 +21,7 @@ let token = '';
 function login() {
   const username = document.getElementById('username').value;
   const password = document.getElementById('password').value;
-  fetch('https://your-render-backend.onrender.com/api/auth/login', {
+  fetch('https://pooja-kit-hqwc.onrender.com/api/auth/login', {
     method: 'POST',
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify({ username, password })
@@ -35,5 +35,5 @@ function login() {
 }
 
 function loadOrders() {
-  fetch('https://your-render-backend.onrender.com/api/orders', {
+  fetch('https://pooja-kit-hqwc.onrender.com/api/orders', {
     headers: { '
