--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -32,7 +32,7 @@ function checkout() {
     totalPrice
   };
 
-  fetch('https://your-render-backend.onrender.com/api/orders', {
+  fetch('https://pooja-kit-hqwc.onrender.com/api/orders', {
     method: 'POST',
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify(orderData)
